# xp_design_patterns

./: Cargo.toml  README.md
benches/: 01_enums_fsm.rs  01_fsm_enums.rs  02_fsm_traits.rs  02_traits_fsm.rs  03_typed_fsm.rs  03_typed_fsm.rs.bak  dummy.c
examples/: 01_builder.rs  02_strategy.rs  03_observer.rs  04_state_machine.rs  04_state_machine_traits.rs  05_state_machine.rs  05_state_machine_enums.rs  05_tokio_event_dispatcher.rs  06_state_machine_enums_comments.rs  06_state_machine_typed.rs  06_tokio_event_dispatcher.rs  07_state_machine_typed_stats1.rs  07_state_machine_typed_stats2.rs  07_tokio_event_dispatcher.rs  08_command_bus.rs  09_command_bus.rs  10_command_bus.rs  11_command_bus.rs  12_command_bus.rs
old/: 05_state_machine_enums.rs  06_state_machine_comments.rs
