[package]
name = "design_patterns"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.7.0"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }


[[bench]]
name = "01_enums_fsm"
harness = false

[[bench]]
name = "02_traits_fsm"
harness = false

[[bench]]
name = "03_typed_fsm"
harness = false
